--- a/css/contacto.css
+++ b/css/contacto.css
@@ -1,11 +1,4 @@
-*{
-    margin: 0;
-    padding: 0;
-    font-family: roboto-regular;
-    box-sizing: border-box;
-}
-
-a{
+/*a{
     list-style: none;
     color: black;
     text-decoration: none;
@@ -13,7 +6,7 @@ a{
     font-weight: 600;
     font-size: 20px;
 }
-
+*/
 .whatsapp_float {
     position: fixed;
     width: 60px;
@@ -27,218 +20,207 @@ a{
     font-size: 30px;
     box-shadow: 2px 2px 3px #999;
     z-index: 100;
-  }
-  .whatsapp-icon {
+}
+
+.whatsapp-icon {
     margin-top: 16px;
-  }
+}
 
-  /* for mobile */
-  @media screen and (max-width: 767px){
+/* for mobile */
+@media screen and (max-width: 767px) {
     .whatsapp-icon {
-      margin-top: 10px;
+        margin-top: 10px;
     }
+
     .whatsapp_float {
-      width: 40px;
-      height: 40px;
-      bottom: 20px;
-      right: 10px;
-      font-size: 22px;
+        width: 40px;
+        height: 40px;
+        bottom: 20px;
+        right: 10px;
+        font-size: 22px;
     }
-  }
-
-.contenedorSeccionContacto{
-    width: 100%;
-    display: flex;
-    position: relative;
-    align-items: center;
-    justify-content: center;
-    margin-top: 200px;
-    margin-bottom: 75px;
 }
 
-.contenedorInfoContacto{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    width: 50%;
-    gap: 20px;
-}
+.mainContacto {
+    .contenedorSeccionContacto {
+        width: 100%;
+        display: flex;
+        position: relative;
+        align-items: center;
+        justify-content: center;
+        margin-top: 200px;
+        margin-bottom: 75px;
 
-.separador{
-    background-color: #149968 ;
-    color: #149968;
-    font-size: 20px;
-}
+        .contenedorImagenCelu {
+            position: relative;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 50%;
 
-.tituloContactoConNosotros{
-    font-size: 50px;
-    text-align: center;
-    font-weight: 300;
-}
+            .imagenCompu {
+                max-width: 100%;
+                position: relative;
+            }
+        }
 
-.logoMasInfo{
-    display: flex;
-    gap: 10px;
-    justify-content: flex-start;
-    align-items: center;
-}
+        .contenedorInfoContacto {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: flex-start;
+            width: 50%;
+            gap: 20px;
 
-.logoContacto{
-    max-width: 9%;
-}
+            .contenedorInfoContactoTitulo {
+                font-size: 40px;
+                max-width: 90%;
+                font-family: "Bree Serif", serif;
+            }
 
-.contenedorImagenCelu{
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 50%;
-}
+            .contenedorInfoContactoSeparador {
+                border-top: 10px solid #07705b;
+                border-radius: 10px;
+                width: 10%;
+                opacity: 1;
+            }
 
-.imagenCompu{
-    max-width: 100%;
-    position: relative;
-}
+            .contenedorInfoContactoInfo {
+                width: 80%;
+                font-family: "Montserrat", sans-serif;
+                font-size: 20px;
+            }
 
-.infoContacto{
-    font-size: 25px;
-    margin-bottom: 0;
-}
+            .contenedorImgRedes {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                gap: 40px;
 
-.contenedorInfoContactoTitulo{
-    font-size: 40px;
-    max-width: 90%;
-}
+                .contenedorInfoContactoBtn {
+                    padding: 10px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    background-color: #07705b;
+                    background-size: cover;
+                    border-radius: 10px;
+                    color: white;
+                }
 
-.contenedorInfoContactoSeparador{
-    border-top: 10px solid #149968;
-    border-radius: 10px;
-    width: 10%;
-    opacity: 1;
-}
+                .contenedorImgRedesIconos {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    gap: 20px;
 
-.contenedorInfoContactoInfo{
-    width: 80%;
-    font-family: roboto-regular;
-    font-size: 20px;
-}
+                    .contenedorLogoRedes {
+                        max-width: 50px;
 
-.contenedorInfoContactoBtn{
-    padding: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #149968;
-    background-size: cover;
-    border-radius: 10px;
-    color: white;
-}
+                        .imgRedes {
+                            width: 100%;
+                            height: 100%;
+                            border-radius: 10px;
+                        }
+                    }
 
-.mainContacto{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+                    .contenedorLogoRedes:hover {
+                        transform: scale(1.1);
+                        transition: 1s;
+                    }
+                }
+            }
+        }
+    }
 
-.contenedorImgRedes{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 40px;
-}
-
-.contenedorLogoRedes{
-    max-width: 50px;
-}
-
-.contenedorLogoRedes:hover{
-    transform: scale(1.1);
-    transition: 1s;
-}
-
-.contenedorImgRedesIconos{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;  
-}
-
-.imgRedes{
-    width: 100%;
-    height: 100%;
-    border-radius: 10px;
 }
 
 @media screen and (max-width: 1400px) {
 
-    .contenedorSeccionContacto{
-        width: 90%;
-        gap: 40px;
-    }
+    .mainContacto {
+        display: flex;
+        justify-content: center;
+        align-items: center;
 
-    .contenedorInfoContactoTitulo{
-        font-size: 30px;
-        width: 95%;
-    }
+        .contenedorSeccionContacto {
+            width: 95%;
+            gap: 40px;
 
-    .contenedorInfoContactoInfo{
-        font-size: 18px;
-        width: 100%;  
-    }
+            .contenedorInfoContacto {
+                .contenedorInfoContactoTitulo {
+                    font-size: 30px;
+                    width: 95%;
+                }
 
-    .contenedorInfoContactoBtn{
-        font-size: 15px;
-    
-    }
+                .contenedorInfoContactoInfo {
+                    font-size: 18px;
+                    width: 100%;
+                }
 
-    .contenedorLogoRedes{
-        max-width: 40px;
-    }
+                .contenedorImgRedes {
+                    .contenedorInfoContactoBtn {
+                        font-size: 15px;
+                    }
 
+                    .contenedorImgRedesIconos {
+                        .contenedorLogoRedes {
+                            max-width: 40px;
+                        }
+                    }
+                }
+            }
+        }
+
+    }
 }
 
-@media screen and (max-width: 990px){
-    .contenedorSeccionContacto{
-        flex-direction: column;
-        margin-top: 100px;
-        margin-bottom: 50px;
-    }
+@media screen and (max-width: 990px) {
 
-    .contenedorInfoContacto{
-        width: 95%;
-        align-items: center;
+    .mainContacto {
+        display: flex;
         justify-content: center;
-        text-align: center;
-    }
+        align-items: center;
 
-    .contenedorImagenCelu{
-        width: 80%;
-    }
+        .contenedorSeccionContacto {
+            flex-direction: column;
+            margin-top: 100px;
+            margin-bottom: 50px;
 
-    .imagenCompu{
-        max-width: 100%;
-    }
+            .contenedorImagenCelu {
+                width: 80%;
 
-    .contenedorInfoContactoTitulo{
-        font-size: 28px;
-    }
+                .imagenCompu {
+                    max-width: 100%;
+                }
+            }
 
-    .contenedorInfoContactoSeparador{
-        width: 20%;
-    }
+            .contenedorInfoContacto {
+                width: 95%;
+                align-items: center;
+                justify-content: center;
+                text-align: center;
 
-    .contenedorInfoContactoInfo{
-        width: 100%;
-        font-size: 18px;
-    }
+                .contenedorInfoContactoTitulo {
+                    font-size: 28px;
+                }
 
-    .contenedorInfoContactoBtn{
-        font-size: 15px;
-    }
+                .contenedorInfoContactoSeparador {
+                    width: 20%;
+                }
 
-    .contenedorImgRedes{
-        flex-direction: column;
+                .contenedorInfoContactoInfo {
+                    width: 100%;
+                    font-size: 18px;
+                }
+
+                .contenedorImgRedes {
+                    flex-direction: column;
+
+                    .contenedorInfoContactoBtn {
+                        font-size: 15px;
+                    }
+                }
+            }
+        }
     }
-    
 }
