--- a/css/nosotros.css
+++ b/css/nosotros.css
@@ -1,11 +1,4 @@
-*{
-    margin: 0;
-    padding: 0;
-    font-family: roboto-regular;
-    box-sizing: border-box;
-}
-
-main{
+main {
     margin-top: 100px;
     padding: 50px 0;
     display: flex;
@@ -13,26 +6,102 @@ main{
     align-items: center;
     gap: 20px;
     justify-content: center;
+
+    .nosotros {
+        width: 90%;
+        gap: 50px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 50px 0;
+
+        .contenedorInfo {
+            position: relative;
+            width: 50%;
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+
+            h3 {
+                font-family: "Bree Serif", serif;
+                font-size: 50px;
+            }
+
+            .contenedorInfoTexto {
+                text-align: justify;
+                font-size: 18px;
+                width: 90%;
+                font-size: 20px;
+                font-family: "Montserrat", sans-serif;
+            }
+        }
+
+        .contenedorImagen {
+            position: relative;
+            max-width: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            .imagenNosotros {
+                width: 70%;
+                height: 100%;
+                object-fit: cover;
+                border-radius: 10px;
+            }
+        }
+    }
+
+    .nosotros-2 {
+        position: relative;
+        display: flex;
+        background-color: #07705b;
+        background-size: cover;
+        padding: 50px 0;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+
+        .contenedorInfoCierre {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 80%;
+            gap: 10%;
+
+            .contenedorTexto {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                text-align: center;
+                width: 45%;
+                gap: 20px;
+
+                .tituloCeo {
+                    color: white;
+                    font-family: "Bree Serif", serif;
+                    width: 100%;
+                    font-size: 70px;
+                    font-weight: 500;
+
+                }
+
+                .infoCierre {
+                    color: #ffff;
+                    font-family: "Montserrat", sans-serif;
+                    font-size: 18px;
+                    font-weight: 600;
+                    text-align: justify;
+                    width: 100%;
+                    line-height: 3;
+                }
+            }
+        }
+    }
 }
 
-.tituloNosotros{
-    font-weight: 600;
-    font-size: 40px;
-}
 
-.nosotros{
-    width: 80%;
-    gap: 50px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.contenedorInfoTexto{
-    font-size: 18px;
-    width: 90%;
-    font-size: 20px;
-}
 
 .whatsapp_float {
     position: fixed;
@@ -47,26 +116,43 @@ main{
     font-size: 30px;
     box-shadow: 2px 2px 3px #999;
     z-index: 100;
-  }
-  .whatsapp-icon {
+}
+
+.whatsapp-icon {
     margin-top: 16px;
-  }
+}
 
-  /* for mobile */
-  @media screen and (max-width: 767px){
+@media screen and (max-width: 1390px) {
     .whatsapp-icon {
-      margin-top: 10px;
+        margin-top: 10px;
     }
-    .whatsapp_float {
-      width: 40px;
-      height: 40px;
-      bottom: 20px;
-      right: 10px;
-      font-size: 22px;
-    }
-  }
 
-a{
+    .whatsapp_float {
+        width: 40px;
+        height: 40px;
+        bottom: 20px;
+        right: 10px;
+        font-size: 22px;
+    }
+}
+
+
+/* for mobile */
+@media screen and (max-width: 767px) {
+    .whatsapp-icon {
+        margin-top: 10px;
+    }
+
+    .whatsapp_float {
+        width: 40px;
+        height: 40px;
+        bottom: 20px;
+        right: 10px;
+        font-size: 22px;
+    }
+}
+
+a {
     list-style: none;
     color: black;
     text-decoration: none;
@@ -75,158 +161,256 @@ a{
     font-size: 20px;
 }
 
-.contenedorInfo{
-    position: relative;
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-}
 
-.contenedorImagen{
-    position: relative;
-    max-width: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 
-.imagenNosotros{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
 
-.nosotros-2{
-    position: relative;
-    display: flex;
-    background-color: #149968;
-    background-size: cover;
-    padding: 50px 0;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-}
 
-.contenedorInfoCierre{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 80%;
-    gap: 10%;
-}
-
-.contenedorTexto{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 45%;
-    gap: 20pxs;
-}
-
-.tituloCeo{
-    color: white;
-    font-family: roboto-regular;
-    width: 100%;
-    font-size: 50px;
-    font-weight: bold;
-}
-
-.infoCierre{
-    color: white;
-    font-family: cursive;
-    font-size: 18px;
-    font-weight: 400;
-    text-align: center;
-    width: 100%;
-    line-height: 3;
-}
-
-.contenedorImagenCeo{
+.contenedorImagenCeo {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 45%;
 }
-.fotoCeo{
+
+.fotoCeo {
     position: relative;
     max-width: 70%;
 }
 
-.lineaTemporal{
+.lineaTemporal {
     padding: 10px;
     max-width: 100%;
     width: 100%;
 }
 
-h4{
+h4 {
     line-height: 2;
 }
 
 @media screen and (max-width:990px) {
-    
-    .nosotros{
-        width: 100%;
-        max-width: 100%;
-        flex-direction: column;
-        text-align: center;
-        gap: 50px;
+
+    main {
+        .nosotros {
+            width: 100%;
+            max-width: 100%;
+            flex-direction: column;
+            text-align: center;
+            gap: 50px;
+
+            .contenedorInfo {
+                width: 90%;
+                max-width: 90%;
+                text-align: center;
+                justify-content: center;
+                align-items: center;
+            }
+
+            .contenedorImagen {
+                max-width: 100%;
+
+                .imagenNosotros {
+                    max-width: 70%;
+                    width: 70%;
+                }
+            }
+        }
+
+        .nosotros-2 {
+            flex-direction: column;
+
+            .contenedorInfoCierre {
+                flex-direction: column;
+
+                .contenedorTexto {
+                    flex-direction: column;
+                    width: 100%;
+                    gap: 20px;
+                    
+                    .tituloCeo {
+                        font-size: 40px;
+                    }
+                    
+                    .infoCierre {
+                        width: 100%;
+                        font-size: 20px;
+                        font-family: roboto-regular;
+                    }
+                }
+
+                .contenedorImagenCeo {
+                    width: 100%;
+                    padding: 10px;
+
+                    .fotoCeo {
+                        position: relative;
+                        max-width: 50%;
+                    }
+                }
+            }
+        }
     }
 
-    .contenedorInfo{
-        width: 90%;
-        max-width: 90%;
-        text-align: center;
-        justify-content: center;
-        align-items: center;
-    }
-    
-    .contenedorImagen{
-        max-width: 80%;
-    }
-    
-    h4{
+
+
+    h4 {
         line-height: 2;
     }
 
-    .nosotros-2{
-        flex-direction: column;
-    }
-    
-    .contenedorInfoCierre{
-        flex-direction: column;
-    }
 
-    .contenedorInfoTexto{
+
+    .contenedorInfoTexto {
         font-size: 18px;
         width: 90%;
     }
-    
-    .contenedorTexto{
-        flex-direction: column;
-        width: 100%;
-        gap: 20px;
-    }
-    
-    .tituloCeo{
-        font-size: 40px;
-    }
-    
-    .contenedorImagenCeo{
-        width: 100%;
-        padding: 10px;
+
+
+
+
+
+}
+
+@media screen and (max-width:645px){
+    main {
+        .nosotros{
+            .contenedorInfo {
+
+                h3{
+                    font-size: 40px;
+                }
+
+                .contenedorInfoTexto{
+                    font-size: 15px;
+                }
+            }
+
+            .contenedorImagen {
+                max-width: 100%;
+
+                .imagenNosotros {
+                    max-width: 50%;
+                    width: 50%;
+                }
+            }
+        }
+
+        .nosotros-2 {
+            flex-direction: column;
+
+            .contenedorInfoCierre {
+                flex-direction: column;
+
+                .contenedorTexto {
+                    flex-direction: column;
+                    width: 100%;
+                    gap: 20px;
+                    
+                    .tituloCeo {
+                        font-size: 40px;
+                    }
+                    
+                    .infoCierre {
+                        width: 100%;
+                        font-size: 15px;
+                        font-family: roboto-regular;
+                    }
+                }
+
+                .contenedorImagenCeo {
+                    width: 100%;
+                    padding: 10px;
+
+                    .fotoCeo {
+                        position: relative;
+                        max-width: 50%;
+                    }
+                }
+            }
+        }
     }
 
-    .fotoCeo{
-        position: relative;
-        max-width: 70%;
+    h4 {
+        line-height: 2;
     }
 
-    .infoCierre{
-        width: 100%;
-        font-size: 20px;
-        font-family: roboto-regular;
+    .contenedorInfoTexto {
+        font-size: 18px;
+        width: 90%;
+    }
+}
+
+@media screen and (max-width:460px) {
+
+    main {
+        .nosotros {
+            width: 100%;
+            max-width: 100%;
+            flex-direction: column;
+            text-align: center;
+            gap: 50px;
+
+            .contenedorInfo {
+                width: 90%;
+                max-width: 90%;
+                text-align: center;
+                justify-content: center;
+                align-items: center;
+            }
+
+            .contenedorImagen {
+                max-width: 100%;
+
+                .imagenNosotros {
+                    max-width: 70%;
+                    width: 70%;
+                }
+            }
+        }
+
+        .nosotros-2 {
+            flex-direction: column;
+
+            .contenedorInfoCierre {
+                flex-direction: column;
+
+                .contenedorTexto {
+                    flex-direction: column;
+                    width: 100%;
+                    gap: 20px;
+                    
+                    .tituloCeo {
+                        font-size: 40px;
+                    }
+                    
+                    .infoCierre {
+                        width: 100%;
+                        font-size: 16px;
+                        font-family: roboto-regular;
+                    }
+                }
+
+                .contenedorImagenCeo {
+                    width: 100%;
+                    padding: 10px;
+
+                    .fotoCeo {
+                        position: relative;
+                        max-width: 70%;
+                    }
+                }
+            }
+        }
     }
 
+
+
+    h4 {
+        line-height: 2;
+    }
+
+
+
+    .contenedorInfoTexto {
+        font-size: 18px;
+        width: 90%;
+    }
 }
